--- a/windows/security/index.yml
+++ b/windows/security/index.yml
@@ -42,9 +42,9 @@ landingContent:
       - linkListType: concept
         links:
         - text: System security
-          url: os-security/trusted-boot.md
+          url: trusted-boot.md
         - text: Encryption and data protection
-          url: os-security/encryption-data-protection.md
+          url: encryption-data-protection.md
         - text: Network security
           url: /windows/security/threat-protection/windows-firewall/windows-firewall-with-advanced-security.md
         - text: Network security
