--- a/windows/security/TOC.yml
+++ b/windows/security/TOC.yml
@@ -204,12 +204,19 @@
    - name: Threat protection
      items: 
      - name: Microsoft Defender Antivirus
-     - name: Attack surface reduction
+       href: https://docs.microsoft.com/microsoft-365/security/defender-endpoint/microsoft-defender-antivirus-windows
+     - name: Attack surface reduction rules
+       href: https://docs.microsoft.com/microsoft-365/security/defender-endpoint/attack-surface-reduction
      - name: Tamper protection
+       href: https://docs.microsoft.com/microsoft-365/security/defender-endpoint/prevent-changes-to-security-settings-with-tamper-protection
      - name: Network protection
+       href: https://docs.microsoft.com/microsoft-365/security/defender-endpoint/network-protection
      - name: Controlled folder access
+       href: https://docs.microsoft.com/microsoft-365/security/defender-endpoint/controlled-folders
      - name: Exploit protection
+       href: https://docs.microsoft.com/microsoft-365/security/defender-endpoint/exploit-protection
      - name: Microsoft Defender for Endpoint
+       href: https://docs.microsoft.com/microsoft-365/security/defender-endpoint
 - name: Application security
   items:
 - name: Secured identity
