--- a/windows/security/TOC.yml
+++ b/windows/security/TOC.yml
@@ -41,7 +41,7 @@
        href: trusted-boot.md
      - name: Cryptography and certificate management
        href: cryptography-certificate-mgmt.md
-     - name: Windows Security app in Windows 11
+     - name: The Windows Security app
        href: threat-protection/windows-defender-security-center/windows-defender-security-center.md
    - name: Encryption and data protection 
      href: encryption-data-protection.md
