--- a/windows/security/TOC.yml
+++ b/windows/security/TOC.yml
@@ -226,6 +226,8 @@
 - name: Cloud services
   href: cloud.md
   items:
+    - name: MDM and Windows 11
+      href: mdm-windows.md
 - name: User protection
   items:
     - name: Technical support policy for lost or forgotten passwords
