--- a/windows/security/index.yml
+++ b/windows/security/index.yml
@@ -74,8 +74,13 @@ landingContent:
     linkLists:
       - linkListType: overview
         links:
-        - text: article (change link later, add more)
-          url: /windows/security/threat-protection/windows-security-baselines.md
+        - text: Azure Active Directory
+          url: https://www.microsoft.com/security/business/identity-access-management/azure-active-directory
+        - text: MDM and Windows 11
+          url: mdm-windows.md
+        - text: Your Microsoft Account
+        - text: OneDrive
+        - text: Family safety
 
 # Cards and links should be based on top customer tasks or top subjects
 # Start card title with a verb
