--- a/windows/security/index.yml
+++ b/windows/security/index.yml
@@ -79,8 +79,11 @@ landingContent:
         - text: MDM and Windows 11
           url: mdm-windows.md
         - text: Your Microsoft Account
+          url: 
         - text: OneDrive
+          url: 
         - text: Family safety
+          url: 
 
 # Cards and links should be based on top customer tasks or top subjects
 # Start card title with a verb
