--- a/windows/configuration/TOC.yml
+++ b/windows/configuration/TOC.yml
@@ -4,10 +4,18 @@
   items:
     - name: Windows 11
       items:
-        - name: Start menu layout
-          href: use-json-customize-start-menu-windows.md
-        - name: Supported Start menu CSPs
-          href: supported-csp-start-menu-layout-windows.md
+        - name: Start menu
+          items:
+          - name: Customize Start menu layout
+            href: use-json-customize-start-menu-windows.md
+          - name: Supported Start menu CSPs
+            href: supported-csp-start-menu-layout-windows.md
+        - name: Taskbar
+          items:
+          - name: Customize Taskbar
+            href: customize-taskbar-windows-11.md
+          - name: Supported Taskbar CSPs
+            href: supported-csp-taskbar-windows.md
     - name: Windows 10 Start and taskbar
       items:
         - name: Start layout and taskbar
