--- a/windows/privacy/toc.yml
+++ b/windows/privacy/toc.yml
@@ -43,6 +43,10 @@
           href: manage-connections-from-windows-operating-system-components-to-microsoft-services.md
         - name: Manage connections from Windows operating system components to Microsoft services using MDM
           href: manage-connections-from-windows-operating-system-components-to-microsoft-services-using-MDM.md
+        - name: Connection endpoints for Windows 11
+          href: manage-windows-11-endpoints.md
+        - name: Connection endpoints for Windows 10, version 21H1
+          href: manage-windows-21H1-endpoints.md
         - name: Connection endpoints for Windows 10, version 20H2
           href: manage-windows-20H2-endpoints.md
         - name: Connection endpoints for Windows 10, version 2004
@@ -57,6 +61,8 @@
           href: manage-windows-1803-endpoints.md
         - name: Connection endpoints for Windows 10, version 1709
           href: manage-windows-1709-endpoints.md
+        - name: Connection endpoints for non-Enterprise editions of Windows 11
+          href: windows-11-endpoints-non-enterprise-editions.md
         - name: Connection endpoints for non-Enterprise editions of Windows 10, version 21H1
           href: windows-endpoints-21H1-non-enterprise-editions.md
         - name: Connection endpoints for non-Enterprise editions of Windows 10, version 20H2
