--- a/windows/privacy/toc.yml
+++ b/windows/privacy/toc.yml
@@ -1,7 +1,7 @@
 - name: Privacy
   href: index.yml
   items: 
-    - name: "Windows 10 & Privacy Compliance: A Guide for IT and Compliance Professionals"
+    - name: "Windows 10 & Windows 11 Privacy Compliance: A Guide for IT and Compliance Professionals"
       href: windows-10-and-privacy-compliance.md
     - name: Configure Windows diagnostic data in your organization
       href: configure-windows-diagnostic-data-in-your-organization.md
@@ -37,7 +37,7 @@
           href: windows-diagnostic-data-1703.md
     - name: Windows 10 diagnostic data events and fields collected through the limit enhanced diagnostic data policy
       href: enhanced-diagnostic-data-windows-analytics-events-and-fields.md
-    - name: Manage Windows 10 connection endpoints
+    - name: Manage Windows 10 and Windows 11 connection endpoints
       items: 
         - name: Manage connections from Windows operating system components to Microsoft services
           href: manage-connections-from-windows-operating-system-components-to-microsoft-services.md
