--- a/windows/privacy/toc.yml
+++ b/windows/privacy/toc.yml
@@ -37,7 +37,7 @@
           href: windows-diagnostic-data-1703.md
     - name: Windows 10 diagnostic data events and fields collected through the limit enhanced diagnostic data policy
       href: enhanced-diagnostic-data-windows-analytics-events-and-fields.md
-    - name: Manage Windows 10 and Windows 11 connection endpoints
+    - name: Manage Windows connection endpoints
       items: 
         - name: Manage connections from Windows operating system components to Microsoft services
           href: manage-connections-from-windows-operating-system-components-to-microsoft-services.md
