--- a/windows/security/threat-protection/TOC.yml
+++ b/windows/security/threat-protection/TOC.yml
@@ -1,7 +1,7 @@
 - name: Windows threat protection
   items: 
    - name: Overview
-     href: threat-protection/index.md
+     href: index.md
    - name: Microsoft Defender Antivirus
      href: https://docs.microsoft.com/microsoft-365/security/defender-endpoint/microsoft-defender-antivirus-windows
    - name: Attack surface reduction rules
