--- a/windows/client-management/mdm/toc.yml
+++ b/windows/client-management/mdm/toc.yml
@@ -480,7 +480,9 @@ items:
             - name: ADMX_Explorer
               href: policy-csp-admx-explorer.md
             - name: ADMX_ExternalBoot
-              href: policy-csp-admx-externalboot.md  
+              href: policy-csp-admx-externalboot.md
+            - name: Feeds
+              href: policy-csp-admx-feeds.md    
             - name: ADMX_FileRecovery
               href: policy-csp-admx-filerecovery.md
             - name: ADMX_FileRevocation
@@ -705,8 +707,6 @@ items:
               href: policy-csp-experience.md
             - name: ExploitGuard
               href: policy-csp-exploitguard.md
-            - name: Feeds
-              href: policy-csp-feeds.md  
             - name: FileExplorer
               href: policy-csp-fileexplorer.md
             - name: Games
