--- a/windows/security/threat-protection/TOC.yml
+++ b/windows/security/threat-protection/TOC.yml
@@ -16,3 +16,23 @@
      href: https://docs.microsoft.com/microsoft-365/security/defender-endpoint/exploit-protection
    - name: Microsoft Defender for Endpoint
      href: https://docs.microsoft.com/microsoft-365/security/defender-endpoint
+
+- name: Hardware security
+  href: ../hardware.md
+
+- name: Operating system security
+  href: ../operating-system.md
+
+- name: Application security
+  href: ../apps.md
+
+- name: Cloud services
+  href: ../cloud.md
+
+- name: User protection
+  href: ../identity.md
+
+- name: Security foundations
+
+- name: Windows Privacy
+  href: windows/privacy/windows-10-and-privacy-compliance.md
