cross linking TOCs

--- a/windows/security/TOC.yml
+++ b/windows/security/TOC.yml
@@ -1,7 +1,7 @@
 
 - name: Windows security
   href: index.yml
-- name: Windows and Zero Trust
+- name: Zero Trust and Windows
   href: zero-trust-windows-device-health.md
   expanded: true
 - name: Hardware security
