--- a/windows/security/threat-protection/auditing/TOC.yml
+++ b/windows/security/threat-protection/auditing/TOC.yml
@@ -763,3 +763,5 @@
                       href: registry-global-object-access-auditing.md
                     - name: File System (Global Object Access Auditing)
                       href: file-system-global-object-access-auditing.md
+        - name: Windows security
+          href: /windows/security/index.yml
