--- a/windows/security/threat-protection/windows-firewall/TOC.yml
+++ b/windows/security/threat-protection/windows-firewall/TOC.yml
@@ -250,3 +250,5 @@
           href: quarantine.md
         - name: Firewall settings lost on upgrade
           href: firewall-settings-lost-on-upgrade.md
+- name: Windows security
+  href: /windows/security/index.yml
