removing TP TOC fixing home link

--- a/windows/security/threat-protection/auditing/TOC.yml
+++ b/windows/security/threat-protection/auditing/TOC.yml
@@ -764,4 +764,4 @@
                     - name: File System (Global Object Access Auditing)
                       href: file-system-global-object-access-auditing.md
         - name: Windows security
-          href: /windows/security/index.yml
+          href: /windows/security/
