--- a/windows/security/index.yml
+++ b/windows/security/index.yml
@@ -20,6 +20,15 @@ landingContent:
 # Cards and links should be based on top customer tasks or top subjects
 # Start card title with a verb
   # Card (optional)
+  - title: Zero Trust and Windows
+    linkLists:
+      - linkListType: overview
+        links:
+        - text: Overview
+          url: zero-trust-windows-device-health.md
+# Cards and links should be based on top customer tasks or top subjects
+# Start card title with a verb
+  # Card (optional)
   - title: Hardware security
     linkLists:
       - linkListType: overview
