--- a/windows/security/index.yml
+++ b/windows/security/index.yml
@@ -64,6 +64,8 @@ landingContent:
           url: trusted-boot.md
         - text: Encryption and data protection
           url: encryption-data-protection.md
+        - text: Windows security baselines
+          url: threat-protection/windows-security-configuration-framework/windows-security-baselines.md
         - text: Network security
           url: identity-protection/vpn/vpn-guide.md
         - text: Virus & threat protection
