--- a/windows/security/TOC.yml
+++ b/windows/security/TOC.yml
@@ -452,4 +452,4 @@
     - name: Common Criteria Certifications
       href: threat-protection/windows-platform-common-criteria.md
 - name: Windows Privacy
-  href: /windows/privacy/windows-10-and-privacy-compliance.md
+  href: /windows/privacy/windows-10-and-privacy-compliance
