--- a/windows/security/index.yml
+++ b/windows/security/index.yml
@@ -81,6 +81,14 @@ landingContent:
         links:
         - text: Overview
           url: apps.md
+      - linkListType: concept
+        links:
+        - text: Application Control and virtualization-based protection
+          url: threat-protection/device-guard/introduction-to-device-guard-virtualization-based-security-and-windows-defender-application-control.md
+        - text: Application Control
+          url: threat-protection/windows-defender-application-control/windows-defender-application-control.md
+        - text: Application Guard
+          url: threat-protection/microsoft-defender-application-guard/md-app-guard-overview.md
 # Cards and links should be based on top customer tasks or top subjects
 # Start card title with a verb
   # Card (optional)
